name:               briefscala
version:            0.1.0.0
description:        A Scala blog site
copyright:          (c) 2016 Yoel Garcia Diaz
license-file:       LICENSE.txt
author:             Yoel Garcia Diaz
maintainer:         yoeluk@gmail.com
build-type:         Simple
cabal-version:      >= 1.2

library
  ghc-options:     -Wall -O2
  hs-source-dirs:  src
  build-depends:
      base == 4.*
    , hakyll == 4.7.*

executable site
  main-is:              Main.hs
  ghc-options:          -rtsopts -Wall -O2
  hs-source-dirs:       src
  build-depends:        containers
                        , text
                        , pandoc
                        , xml-conduit
                        , filepath
                        , split
                        , blaze-html
